--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
-fastapi
-supabase
-python-jose[cryptography]
-passlib
-python-multipart
-uvicorn
-python-dotenv
-bcrypt
+# Web Framework
+fastapi>=0.95.0,<0.96.0
+uvicorn[standard]>=0.22.0,<0.23.0
+
+# Database
+supabase>=1.0.3,<2.0.0
+postgrest>=0.10.6,<0.11.0
+
+# Authentication & Security
+python-jose[cryptography]>=3.3.0,<4.0.0
+passlib[bcrypt]>=1.7.4,<2.0.0
+bcrypt>=4.0.1,<5.0.0
+python-multipart>=0.0.6,<0.1.0
+
+# Environment & Configuration
+python-dotenv>=1.0.0,<2.0.0
+
+# Date & Time Handling
+pytz>=2023.3,<2024.0
+
+# Validation & Serialization
+pydantic>=1.10.7,<2.0.0
+email-validator>=2.0.0,<3.0.0
+
+# Testing
+pytest>=7.3.1,<8.0.0
+httpx>=0.24.0,<0.25.0
+
+# Development Tools
+black>=23.3.0,<24.0.0
+isort>=5.12.0,<6.0.0
+flake8>=6.0.0,<7.0.0
