--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Web Framework
-fastapi>=0.95.0,<0.96.0
-uvicorn[standard]>=0.22.0,<0.23.0
+fastapi>=0.110.0,<0.111.0
+uvicorn[standard]>=0.24.0,<0.25.0
 
 # Database
 supabase>=1.0.3,<2.0.0
-postgrest>=0.10.6,<0.11.0  # Ensure compatibility with FastAPI
-pydantic<2.0.0  # Ensure compatibility with FastAPI
+postgrest>=0.10.6,<0.11.0
+pydantic>=2.0.0,<3.0.0
 
 # Authentication & Security
 python-jose[cryptography]>=3.3.0,<4.0.0
-passlib[bcrypt]>=1.7.4,<2.0.0
-bcrypt>=4.0.1,<5.0.0
+passlib[bcrypt]>=1.7.4,<1.8.0
+bcrypt==4.0.1  # Pin to a specific version that works well with passlib
 python-multipart>=0.0.6,<0.1.0
 
 # Environment & Configuration
@@ -23,8 +23,8 @@ pytz>=2023.3,<2024.0
 email-validator>=2.0.0,<3.0.0
 
 # Testing
-pytest>=7.3.1,<8.0.0
-httpx>=0.23.0,<0.24.0  # Compatible with both FastAPI & Postgrest
+pytest>=7.4.0,<8.0.0
+httpx>=0.24.1,<0.25.0
 
 # Development Tools
 black>=23.3.0,<24.0.0
